--- a/pages/media.html
+++ b/pages/media.html
@@ -207,12 +207,12 @@
                                                 <div class="accordion-body">
                                                     <div>
                                                         <ul class="nav nav-tabs" role="tablist" style="background: #f1fff0;">
-                                                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#Art-1-1" style="font-size: 16px;">Artículo 1</a></li>
-                                                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-2-1" style="font-size: 16px;">Artículo 2</a></li>
-                                                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-3-1" style="font-size: 16px;">Artículo 2</a></li>
+                                                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#Art-1-2" style="font-size: 16px;">Artículo 1</a></li>
+                                                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-2-2" style="font-size: 16px;">Artículo 2</a></li>
+                                                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-3-2" style="font-size: 16px;">Artículo 2</a></li>
                                                         </ul>
                                                         <div class="tab-content">
-                                                            <div class="tab-pane active" role="tabpanel" id="Art-1-1">
+                                                            <div class="tab-pane active" role="tabpanel" id="Art-1-2">
                                                                 <div>
                                                                     <div class="ratio ratio-16x9" style="width: 100%;height: 50%;"><iframe src="../media/pdf/viewer.html?file=archives/etate/ETATE.pdf"></iframe></div>
                                                                 </div>
@@ -231,7 +231,28 @@
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-3" aria-expanded="false" aria-controls="accordion-1 .item-3" style="font-size: 18px;background: #f7f2ff;">Abril</button></h2>
                                             <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-1">
-                                                <div class="accordion-body"></div>
+                                                <div class="accordion-body">
+                                                    <div>
+                                                        <ul class="nav nav-tabs" role="tablist" style="background: #f1fff0;">
+                                                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#Art-1-3" style="font-size: 16px;">Artículo 1</a></li>
+                                                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-2-3" style="font-size: 16px;">Artículo 2</a></li>
+                                                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-3-3" style="font-size: 16px;">Artículo 2</a></li>
+                                                        </ul>
+                                                        <div class="tab-content">
+                                                            <div class="tab-pane active" role="tabpanel" id="Art-1-3">
+                                                                <div>
+                                                                    <div class="ratio ratio-16x9" style="width: 100%;height: 50%;"><iframe src="../media/pdf/viewer.html?file=archives/etate/ETATE.pdf"></iframe></div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="tab-pane" role="tabpanel" id="Art-2-3">
+                                                                <p>Content for tab 2.</p>
+                                                            </div>
+                                                            <div class="tab-pane" role="tabpanel" id="Art-3-3">
+                                                                <p>Content for tab 3.</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
