--- a/pages/media.html
+++ b/pages/media.html
@@ -173,10 +173,10 @@
                             <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#documents .item-2" aria-expanded="false" aria-controls="documents .item-2" style="font-size: 24px;">Visualizador de documentos</button></h2>
                             <div class="accordion-collapse collapse item-2" role="tabpanel">
                                 <div class="accordion-body">
-                                    <div class="accordion" role="tablist" id="accordion-1">
+                                    <div class="accordion" role="tablist" id="ETATE-A">
                                         <div class="accordion-item">
-                                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-1" aria-expanded="false" aria-controls="accordion-1 .item-1" style="font-size: 18px;background: #f7f2ff;">Febrero</button></h2>
-                                            <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-1">
+                                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ETATE-A .etate-ac-1" aria-expanded="false" aria-controls="ETATE-A .etate-ac-1" style="font-size: 18px;background: #f7f2ff;">Febrero</button></h2>
+                                            <div class="accordion-collapse collapse etate-ac-1" role="tabpanel" data-bs-parent="#ETATE-A">
                                                 <div class="accordion-body">
                                                     <div>
                                                         <ul class="nav nav-tabs" role="tablist" style="background: #f1fff0;">
@@ -202,8 +202,8 @@
                                             </div>
                                         </div>
                                         <div class="accordion-item">
-                                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="false" aria-controls="accordion-1 .item-2" style="font-size: 18px;background: #f7f2ff;">Marzo</button></h2>
-                                            <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-1">
+                                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ETATE-A .etate-ac-2" aria-expanded="false" aria-controls="ETATE-A .etate-ac-2" style="font-size: 18px;background: #f7f2ff;">Marzo</button></h2>
+                                            <div class="accordion-collapse collapse etate-ac-2" role="tabpanel" data-bs-parent="#ETATE-A">
                                                 <div class="accordion-body">
                                                     <div>
                                                         <ul class="nav nav-tabs" role="tablist" style="background: #f1fff0;">
@@ -229,8 +229,8 @@
                                             </div>
                                         </div>
                                         <div class="accordion-item">
-                                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-3" aria-expanded="false" aria-controls="accordion-1 .item-3" style="font-size: 18px;background: #f7f2ff;">Abril</button></h2>
-                                            <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-1">
+                                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ETATE-A .etate-ac-3" aria-expanded="false" aria-controls="ETATE-A .etate-ac-3" style="font-size: 18px;background: #f7f2ff;">Abril</button></h2>
+                                            <div class="accordion-collapse collapse etate-ac-3" role="tabpanel" data-bs-parent="#ETATE-A">
                                                 <div class="accordion-body">
                                                     <div>
                                                         <ul class="nav nav-tabs" role="tablist" style="background: #f1fff0;">
